fix: z-index

--- a/src/js/pages/Home/index.scss
+++ b/src/js/pages/Home/index.scss
@@ -66,7 +66,7 @@ $max-width: 750px;
       margin: 0 auto;
       padding: 0 84px;
       position: relative;
-      z-index: 10000;
+      z-index: 1000;
 
       @media screen and (max-width: 768px) {
         padding: 0;
